# AI-OCR-ReadImage-PythonDocker

./: .env  AGENTS.md  Dockerfile  README.md  main.py  paddle_transformers.py  prd.md  pyproject.toml  test_easyocr.py  test_ocr.py  test_ocr_timing.py  test_ocrspace.py  test_transformers.py
app/: main.py  ocr.py
